# ShadowCommit

./: .gitignore  README.md  pyproject.toml
shadow-commit-demo/: .gitignore  package-lock.json  package.json
shadow-commit-demo/src/: Composition.tsx  Root.tsx
shadow-commit-demo/src/scenes/: Scene1Hook.tsx  Scene2Problem.tsx  Scene3Pipeline.tsx  Scene4Matrix.tsx  Scene5Stats.tsx
shadowcommit/: constants.py
shadowcommit/commitment/: __init__.py  extractor.py  schema.py
shadowcommit/diff/: __init__.py  extractor.py
shadowcommit/environment/: agent.py  corruption_agent.py  obfuscated_agent.py  persistence_agent.py  sample_files.py  scope_creep_agent.py  workspace.py
shadowcommit/eval/: __init__.py  run_eval.py
shadowcommit/monitor/: __init__.py  rule_checker.py
shadowcommit/shadow/: __init__.py  executor.py
tests/: conftest.py  test_agent.py  test_agent_commitments.py  test_commitment_extractor.py  test_commitment_schema.py  test_constants.py  test_corruption_agent.py  test_diff_extractor.py  test_eval.py  test_obfuscated_agent.py  test_persistence_agent.py  test_rule_checker.py  test_sample_files.py  test_scope_creep_agent.py  test_shadow_executor.py  test_workspace.py
